# tic-tac-toe

./: CMakeLists.txt  README.md  main.cpp
src/: ai.cpp  ai.h  board.cpp  board.h
test/: tictactoe_test.cpp
